--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#about-me">About Me</a>
                 <a href="#experience">Experience</a>
                 <a href="#projects">Projects</a>
-                <a href="resume.pdf" target="_blank"> Resume</a>
+                <a href="https://drive.google.com/file/d/1tB3Atgz5CpiIJSTlrIB0bfcxrKrFJG0k/view?usp=sharing" target="_blank"> Resume</a>
                 <a href="https://github.com/Patel-Hetu" target="_blank">
                     <img src="icons8-github-64.png" alt="GitHub" class="icon">
                 </a>
