--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             <h2>What I learned at University...</h2>
             <div class="courses-container">
                 <div class="course-card">
+                    <h3>Data Mining</h3>
+                    <p>Learned data mining techniques, algorithms, and applications for practical web-based solutions.</p>
+                    <p><strong>Semester:</strong> Winter 2025</p>
+                </div>
+                <div class="course-card">
                     <h3>Machine Learning</h3>
                     <p>Implemented supervised and unsupervised learning models (e.g., SVMs, K-means) and optimized neural networks using frameworks like TensorFlow/PyTorch.</p>
                     <p><strong>Semester:</strong> Fall 2024</p>
