--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-left">
-                <h1>Hetu Patel</h1>
+                <h1>Welcome to Hetu Patel's Portfolio</h1>
             </div>
             <div class="navbar-right">
                 <a href="#about-me">About Me</a>
