--- a/index.html
+++ b/index.html
@@ -29,10 +29,26 @@
         </nav>
     </header>
     <main>
-        <hr class="divider">
         <section id="about">
-            <h2>About Me...</h2>
-            <p>Hello!!  I am Hetu Patel, a third-year <b>Computer Science student</b> pursuing a <b>minor in Business Management</b> at <b>Toronto Metropolitan University</b>. My passion lies in AI/ML and startups, with a focus on leveraging technical expertise to drive innovation. Proficient in Python, Java, C, and React, I have hands-on experience with deep learning frameworks like YOLOv8, Roboflow, and TensorFlow. I specialize in building scalable solutions, applying machine learning, computer vision, and Agile methodologies. As a leader and advocate for student initiatives, I strive to combine technical acumen with a drive for impactful, real-world problem-solving.</p>
+            <h2>About Me</h2>
+            <div class="about-container">
+                <div class="about-card">
+                    <h3>Who I Am?</h3>
+                    <p>I'm Hetu Patel, a third-year <b>Computer Science student</b> minoring in <b>Business Management</b> at <b>Toronto Metropolitan University</b>.</p>
+                </div>
+                <div class="about-card">
+                    <h3>My Passion</h3>
+                    <p>I'm passionate about <b>AI/ML</b> and startups, using technical expertise to drive innovation and build scalable solutions.</p>
+                </div>
+                <div class="about-card">
+                    <h3>Technical Skills</h3>
+                    <p>Proficient in <b>Python, Java, C, React</b>, with hands-on experience in <b>YOLOv8, Roboflow, TensorFlow</b>, and computer vision.</p>
+                </div>
+                <div class="about-card">
+                    <h3>Leadership & Advocacy</h3>
+                    <p>Dedicated to student initiatives, combining <b>technical acumen</b> with a drive for impactful real-world problem-solving.</p>
+                </div>
+            </div>
         </section>
         
         <hr class="divider">
@@ -113,8 +129,8 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Description</th>
                         <th>Key Skills</th>
+                        <th>Description</th>
                         <th>Link</th>
                         <th>Time</th>
                     </tr>
@@ -122,76 +138,76 @@
                 <tbody>
                     <tr>
                         <td style="text-align: center; font-weight: bold;">Automated Basketball Object Detection and Tracking Software</td>
-                        <td><p>Developed a basketball analytics system using AI-driven YOLOv8 and Roboflow models, achieving 73.7% mAP50-95 for real-time player, ball and rim detection after fine-tuning over 15 epochs.</p><p>Utilized advanced machine learnign techniques like UMAP, K-means clustering, ONNX runtime and CUDA for GPU-accelerated training, enaling accurate team classification and reducing runtime to 9.6ms per frame for live sports applications.</p></td>
                         <td>Deep learning (YOLOv8, Roboflow), GPU optimization (CUDA, ONNX), ML techniques (UMAP, K-means), and real-time sports analytics (9.6ms/frame).</td>
+                        <td><p>Developed a basketball analytics system using AI-driven YOLOv8 and Roboflow models, achieving 73.7% mAP50-95 for real-time player, ball and rim detection after fine-tuning over 15 epochs.</p><p>Utilized advanced machine learnign techniques like UMAP, K-means clustering, ONNX runtime and CUDA for GPU-accelerated training, enaling accurate team classification and reducing runtime to 9.6ms per frame for live sports applications.</p></td>
                         <td style="text-align: center;"><a href="https://github.com/Patel-Hetu/BasketVision" title="Automated Basketball Object Detection and Tracking Software">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
                     <tr>
                         <td style="text-align: center; font-weight: bold;">OurMeal App</td>
-                        <td><p>Designed a prototype app in Visual Studio 2022 using Visual Studio and .NET framework, employing event-driven programming and graphical user interface (GUI) design principles to enhance usability and streamline household supply management.</p><p>Developed two distinct interfaces- one for fridge door interaction and another for mobile devices, focusing on human-computer interaction (HCI) techniques such as contextual navigation, intuitive screen layouts and workflow optimization to ensure a seamless and user-friendly experience.</p></td>
                         <td>GUI design (.NET, Visual Studio), event-driven programming, and HCI techniques for supply management.</td>
+                        <td><p>Designed a prototype app in Visual Studio 2022 using Visual Studio and .NET framework, employing event-driven programming and graphical user interface (GUI) design principles to enhance usability and streamline household supply management.</p><p>Developed two distinct interfaces- one for fridge door interaction and another for mobile devices, focusing on human-computer interaction (HCI) techniques such as contextual navigation, intuitive screen layouts and workflow optimization to ensure a seamless and user-friendly experience.</p></td>
                         <td style="text-align: center;"><a href="https://github.com/Patel-Hetu/OurMeals-App" title="OurMeal App">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
                     <tr>
                         <td style="text-align: center; font-weight: bold;">Clustering Analysis of Diabetes Risk and Progression </br>(Research Paper)</td>
-                        <td><p>Preprocessed the Pima Indian Diabetes dataset by handling missing values, scaling features with MinMaxScalar, and conducting exploratory analysis using correlation heatmaps and pair-plots. Applied K-Means and Hierarchical Clustering to classify individuals into Low, Medium and High-Risk categories based on health like glucose, BMI and insulin levels.</p><p>Visualized clustering results with scatter plots, radar chartstoo and dendograms, providing actionable insights for early detection and tailored diabetes interventions, while comparing algorithm efficiency and structure insights.</p></td>
                         <td>Preprocessing, clustering (K-Means, Hierarchical), and visual analytics for health insights.</td>
+                        <td><p>Preprocessed the Pima Indian Diabetes dataset by handling missing values, scaling features with MinMaxScalar, and conducting exploratory analysis using correlation heatmaps and pair-plots. Applied K-Means and Hierarchical Clustering to classify individuals into Low, Medium and High-Risk categories based on health like glucose, BMI and insulin levels.</p><p>Visualized clustering results with scatter plots, radar chartstoo and dendograms, providing actionable insights for early detection and tailored diabetes interventions, while comparing algorithm efficiency and structure insights.</p></td>
                         <td style="text-align: center;"><a href="https://github.com/Patel-Hetu/ML-Diabetes-Risk-Progression-Stage" title="Clustering Analysis of Diabetes Risk and Progression">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
                     <tr>
                         <td style="text-align: center; font-weight: bold;">Comprehensive Security Analysis and Cryptographic Implementation</td>
-                        <td><p>Implemented AES and RSA encryption, analyzed speculative execution vulnerabilies (Spectre), and demonstrated secure communication methods through secret-key and public-key encryption.</p><p>Identified buffer overflow vulnerabilies, conducted packet sniffing and spoofing, configured VPN tunnels and bypassed firewalls to understand and mitigate real-world security threats.</p></td>
                         <td>Encryption (AES, RSA), vulnerability analysis (Spectre, buffer overflow), and secure communications.</td>
+                        <td><p>Implemented AES and RSA encryption, analyzed speculative execution vulnerabilies (Spectre), and demonstrated secure communication methods through secret-key and public-key encryption.</p><p>Identified buffer overflow vulnerabilies, conducted packet sniffing and spoofing, configured VPN tunnels and bypassed firewalls to understand and mitigate real-world security threats.</p></td>
                         <td style="text-align: center;"><a href="https://github.com/Patel-Hetu/SEEDLabs" title="Comprehensive Security Analysis and Cryptographic Implementation">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
                     <tr>
                         <td style="text-align: center; font-weight: bold;">Car Rental DBMS Design and Implementation</td>
-                        <td><p>Designed and normalized a comprehensive relational database for a car rental service, adhering to 3NF and BCNF principles to ensure data integrity. Implemented schema for managing customers, vehicles, rentals, payments and maintenance records, ensuring scalalibity and security.</p><p>Developed simple and advanced SQL queries for operational insights, such as rental patterns and maintenance costs. Integrated a Unix shell-based interface for seamless database interactions, enhancing user accessibility and functionality.</p></td>
                         <td>Database normalization (3NF, BCNF), SQL queries, and Unix-shell interface for operational efficiency.</td>
+                        <td><p>Designed and normalized a comprehensive relational database for a car rental service, adhering to 3NF and BCNF principles to ensure data integrity. Implemented schema for managing customers, vehicles, rentals, payments and maintenance records, ensuring scalalibity and security.</p><p>Developed simple and advanced SQL queries for operational insights, such as rental patterns and maintenance costs. Integrated a Unix shell-based interface for seamless database interactions, enhancing user accessibility and functionality.</p></td>
                         <td style="text-align: center;"><a href="https://github.com/Patel-Hetu/RentalCar" title="Car Rental DBMS Design and Implementation">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
                     <tr>
                         <td style="text-align: center; font-weight: bold;">Club Management System Software</td>
-                        <td><p>Developed a web application using Python 3.8, Flask, and Flask-SQLAlchemy to manage club attendance, payments, and financial records, enabling automated notifications and financial tracking for members and coaches.</p> <p>Applied database management, SQL queries, and web development techniques to create a user-friendly interface, ensuring efficient session registration and payment tracking while enhancing financial accountability.</p></td>
                         <td> Python, Flask, Flask-SQLAlchemy, SQLite, SQL Queries, Web Development, User Authentication, Financial Management.</td>
+                        <td><p>Developed a web application using Python 3.8, Flask, and Flask-SQLAlchemy to manage club attendance, payments, and financial records, enabling automated notifications and financial tracking for members and coaches.</p> <p>Applied database management, SQL queries, and web development techniques to create a user-friendly interface, ensuring efficient session registration and payment tracking while enhancing financial accountability.</p></td>
                         <td style="text-align: center;"><a href="https://github.com/Patel-Hetu/ClubManagementSystem" title="Club Management System Software">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
                     <tr>
                         <td style="text-align: center; font-weight: bold;">StudyHere Application</td>
+                        <td>React Native (JavaScript) for cross-platform development, AI-powered productivity with spaCy and Machine Learning</td>
                         <td><p>Mobile app (Android/iOS) being built with React Native (JavaScript) on the Lean Startup Methodology (mentored by Sean Wise, Lean Startup pioneer).
                             User research identified a 82% pain point of feeling overwhelmed. We're building a collaborative platform with AI-powered productivity using NLP libraries
                             (spaCy) for assignment analysis and Machine Learning for scheduling based on user data (mood, motivation).</p><p>Cross-platform development with Git/GitHub version control ensures collaborative development. Targeting ~270K outreach among university students
                                 in Ontario to reduce procrastination by 30% and improve student performance.</p></td>
-                        <td>React Native (JavaScript) for cross-platform development, AI-powered productivity with spaCy and Machine Learning</td>
                         <td style="text-align: center;"><a href="https://hetupatel.wixsite.com/tudyhere" title="StudyHere Application">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
                     <tr>
                         <td style="text-align: center; font-weight: bold;">Research on ChatGPT in Academia</td>
+                        <td>Python (Pandas) for data cleaning, statistical analysis, visualization with Excel, and survey design to assess AI tool perceptions in academia.</td>
                         <td><p>Conducted a global survey with 105 participants. Python libraries like Pandas facilitated data cleaning, manipulation, and statistical analysis(Excel),
                             generating graphical and dynamic visualizations (figures, charts, taAbles) to represent key findings on student perceptions of plagiarism risks and
                             potential educational benefits.</p></td>
-                        <td>Python (Pandas) for data cleaning, statistical analysis, visualization with Excel, and survey design to assess AI tool perceptions in academia.</td>
                         <td style="text-align: center;"><a href="https://github.com/Patel-Hetu/RentalCar" title="Research on ChatGPT in Academia">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
                     <tr>
                         <td style="text-align: center; font-weight: bold;">AI and Big Data in Renewable Energy <br/>(Research Paper)</td>
-                        <td><p>Conducted a research paper on the integration of AI and Big Data in optimizing renewable energy sources such as solar, wind, and hydrogen power, focusing on improving production efficiency and economic sustainability.</p><p>Analyzed AI algorithms for solar panel positioning, predictive models for wind conditions, and AI-informed resource management for hydrogen power, highlighting their role in advancing clean energy technologies and supporting global energy transitions.</p></td>
                         <td>Database normalization (3NF, BCNF), SQL queries, and Unix-shell interface for operational efficiency.</td>
+                        <td><p>Conducted a research paper on the integration of AI and Big Data in optimizing renewable energy sources such as solar, wind, and hydrogen power, focusing on improving production efficiency and economic sustainability.</p><p>Analyzed AI algorithms for solar panel positioning, predictive models for wind conditions, and AI-informed resource management for hydrogen power, highlighting their role in advancing clean energy technologies and supporting global energy transitions.</p></td>
                         <td style="text-align: center;"><a href="https://drive.google.com/file/d/1YV5_oQQbS4XNyA6v3fZteQJybW-90DIf/view?usp=sharing" title="AI and Big Data in Renewable Energy">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
                     <tr>
                         <td style="text-align: center; font-weight: bold;">Boggle Game</td>
-                        <td><p> Developed a Boggle game in Elixir using functional programming principles, implementing efficient depth-first search and backtracking algorithms to explore all word combinations, ensuring optimized performance and minimal memory usage.</p><p>Utilized Elixir’s actor model and process-based architecture to handle concurrent word searches across the board, enabling real-time gameplay with seamless player interaction and dynamic updates.</p></td>
                         <td>Utilized functional programming, algorithm optimization, depth-first search, backtracking, concurrency with Elixir’s actor model, and real-time interaction handling to develop an efficient Boggle game.</td>
+                        <td><p> Developed a Boggle game in Elixir using functional programming principles, implementing efficient depth-first search and backtracking algorithms to explore all word combinations, ensuring optimized performance and minimal memory usage.</p><p>Utilized Elixir’s actor model and process-based architecture to handle concurrent word searches across the board, enabling real-time gameplay with seamless player interaction and dynamic updates.</p></td>
                         <td style="text-align: center;"><a href="https://github.com/Patel-Hetu/BoggleGame" title="Boggle Game">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
@@ -295,7 +311,7 @@
             </div>
         </section>
         <hr class="divider">
-        <footer style="color: rgb(0, 0, 0); padding: 30px 15px; text-align: center; font-family: Arial, sans-serif;">
+        <footer style="color: rgb(255, 255, 255); padding: 30px 15px; text-align: center; font-family: Arial, sans-serif;">
             <h3 style="margin-bottom: 20px; font-size: 1.5rem;">Contact Me</h3>
             <form action="https://formspree.io/f/mbllbrjw" method="POST" style="max-width: 400px; margin: 0 auto; text-align: left;">
               <div style="margin-bottom: 15px;">
@@ -317,9 +333,9 @@
             </form>
             <div style="margin-top: 20px;">
               <p style="margin: 10px 0;">Or reach out directly:</p>
-              <a href="mailto:hetu.patel@torontomu.ca" style="color: #ffffff; margin: 0 10px; text-decoration: none;">Email</a>
-              <a href="https://www.linkedin.com/in/hetu-patel-cs-tmu" target="_blank" style="color: #ffffff; margin: 0 10px; text-decoration: none;">LinkedIn</a>
-              <a href="https://github.com/Patel-Hetu" target="_blank" style="color: #ffffff; margin: 0 10px; text-decoration: none;">GitHub</a>
+              <a href="mailto:hetu.patel@torontomu.ca" style="color: #007acc; margin: 0 10px; text-decoration: none;"><u>Email</u></a>
+              <a href="https://www.linkedin.com/in/hetu-patel-cs-tmu" target="_blank" style="color: #007acc; margin: 0 10px; text-decoration: none;"><u>  LinkedIn </u></a>
+              <a href="https://github.com/Patel-Hetu" target="_blank" style="color: #007acc; margin: 0 10px; text-decoration: none;"><u>GitHub</u></a>
             </div>
             <p>© 2025 Hetu Patel. All rights reserved.</p>
           </footer>
