--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
             <h2>Experience</h2>
             <div class="timeline">
                 <div class="timeline-item">
+                    <span class="year">Upcoming</span>
+                    <h3>Senate Member of Toronto Metropolitan University</h3>
+                    <p>Will advocate for student interests by reviewing and voting on key academic policies, ensuring alignment with undergraduate needs, and contributing to discussions on curriculum, grading, and university governance.</p>
+                    <p>Will strengthen student representation by engaging with peers, gathering feedback, and presenting concerns to the Senate, leading to informed decision-making on academic and institutional matters.</p>
+                </div>
+                <div class="timeline-item">
                     <span class="year">Oct 2024 - Dec 2024</span>
                     <h3>Start-up Certified Program</h3>
                     <p>Completed the exclusive Startup Certified program, gaining hands-on entrepreneurial skills through workshops led by Experts-In-Residence. Covered key areas like marketing, product-market fit, sales, raising capital, and team collaboration, preparing me to launch my own startup or excel in a startup environment.</p>
@@ -68,7 +74,7 @@
                     <p>As the founding President of the Hindu Students' Association, I established the organization to foster a sense of community among Hindu students at Toronto Metropolitan University. My vision was to create a safe, inclusive space where individuals could share their beliefs, celebrate traditions, and practice our religion together, promoting cultural and spiritual growth on campus.</p>
                 </div>
                 <div class="timeline-item">
-                    <span class="year">Sept 2024 - Present</span>
+                    <span class="year">Aug 2024 - Jan 2025</span>
                     <h3>Academic Integrity Ambassadors</h3>
                     <p><strong>Position:</strong> President</p>
                     <p>As President of the Academic Integrity Ambassadors at Toronto Metropolitan University, I lead a dedicated team focused on promoting a culture of academic honesty across campus. Through peer-to-peer education, outreach initiatives, and collaboration with the Academic Integrity Office, we raise awareness and engage students in meaningful discussions around academic integrity. I oversee event planning, outreach campaigns, and policy discussions, while fostering a community that upholds the university’s academic values.</p>
