--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <td style="text-align: center; font-weight: bold;">AI and Big Data in Renewable Energy <br/>(Research Paper)</td>
                         <td>Database normalization (3NF, BCNF), SQL queries, and Unix-shell interface for operational efficiency.</td>
                         <td><p>Conducted a research paper on the integration of AI and Big Data in optimizing renewable energy sources such as solar, wind, and hydrogen power, focusing on improving production efficiency and economic sustainability.</p><p>Analyzed AI algorithms for solar panel positioning, predictive models for wind conditions, and AI-informed resource management for hydrogen power, highlighting their role in advancing clean energy technologies and supporting global energy transitions.</p></td>
-                        <td style="text-align: center;"><a href="https://drive.google.com/file/d/1YV5_oQQbS4XNyA6v3fZteQJybW-90DIf/view?usp=sharing" title="AI and Big Data in Renewable Energy">View Project</a></td>
+                        <td style="text-align: center;"><a href="https://github.com/hetuvpatel/AI-BigData-Renewable-Energy" title="AI and Big Data in Renewable Energy">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
                     <tr>
