--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#experience">Experience</a>
                 <a href="#projects">Projects</a>
                 <a href="https://drive.google.com/file/d/19rswEzDYAyihdQl20HNSPluVCKeNdIrh/view?usp=sharing" target="_blank"> Resume</a>
-                <a href="https://github.com/Patel-Hetu" target="_blank">
+                <a href="https://github.com/hetuvpatel" target="_blank">
                     <img src="icons8-github-64.png" alt="GitHub" class="icon">
                 </a>
                 <a href="https://www.linkedin.com/in/hetu-patel-toronto/" target="_blank">
