--- a/index.html
+++ b/index.html
@@ -163,6 +163,13 @@
                         <td style="text-align: center;"><a href="https://github.com/Patel-Hetu/ML-Diabetes-Risk-Progression-Stage" title="Clustering Analysis of Diabetes Risk and Progression">View Project</a></td>
                         <td>Sep 2024 - Dec 2024</td>
                     </tr>
+                        <td style="text-align: center; font-weight: bold;">Stroke Prediction Using Data Mining</td>
+                        <td>Machine learning models (Logistic Regression, Decision Tree, Random Forest, KNN, SVM), data preprocessing (SMOTE, StandardScaler, RFE), ensemble techniques (Stacked Learning).</td>
+                        <td>
+                        <p>Developed a predictive model to classify stroke risk using healthcare demographic features by applying advanced data mining techniques and rigorous model evaluation (Accuracy, F1-Score, ROC AUC).</p>
+                        <p>Utilized SMOTE for class imbalance correction, Recursive Feature Elimination (RFE) for feature selection, and built a Stacked Ensemble model that achieved a superior accuracy of 96.66% and ROC AUC of 98.37%.</p></td>
+                        <td style="text-align: center;"><a href="https://github.com/hetuvpatel/brain-stroke-prediction" title="Stroke Prediction Using Data Mining">View Project</a </td>
+                        <td>Jan 2025 - Apr 2025</td>
                     <tr>
                         <td style="text-align: center; font-weight: bold;">Comprehensive Security Analysis and Cryptographic Implementation</td>
                         <td>Encryption (AES, RSA), vulnerability analysis (Spectre, buffer overflow), and secure communications.</td>
