--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#about-me">About Me</a>
                 <a href="#experience">Experience</a>
                 <a href="#projects">Projects</a>
-                <a href="https://github.com/hetuvpatel/hetu-patel-portfolio/blob/main/hetu-patel-resume.pdf" download>Download Resume</a>
+                <a href="https://drive.google.com/file/d/19rswEzDYAyihdQl20HNSPluVCKeNdIrh/view?usp=sharing" download>Download Resume</a>
                 <a href="https://github.com/hetuvpatel" target="_blank">
                     <img src="icons8-github-64.png" alt="GitHub" class="icon">
                 </a>
