--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                     <p>Will strengthen student representation by engaging with peers, gathering feedback, and presenting concerns to the Senate, leading to informed decision-making on academic and institutional matters.</p>
                 </div>
                 <div class="timeline-item">
+                    <span class="year">May 06 - Present</span>
+                    <h3>Department of Computer Science, Toronto Metropolitan University</h3>
+                    <p><strong>Position:</strong>Undergraduate Student Assistant</p>
+                    <p>Working under the supervision of Dr. Eric Harley and in collaboration with Computer Science and Journalism faculties on the JeRI (Journalism Representation Index) project to enhance news source classification using LLMs and NLP techniques.</p>
+                    <p>Assisting with data preprocessing, prompt engineering, and model evaluation to support the development of software that classifies cited entities in news articles (e.g., organizations, experts, authorities) and assesses sourcing balance across diverse media datasets. </p>
+                </div>
+                <div class="timeline-item">
                     <span class="year">Oct 2024 - Dec 2024</span>
                     <h3>Start-up Certified Program</h3>
                     <p>Completed the exclusive Startup Certified program, gaining hands-on entrepreneurial skills through workshops led by Experts-In-Residence. Covered key areas like marketing, product-market fit, sales, raising capital, and team collaboration, preparing me to launch my own startup or excel in a startup environment.</p>
