--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#about-me">About Me</a>
                 <a href="#experience">Experience</a>
                 <a href="#projects">Projects</a>
-                <a href="<a href="resume.html" target="_blank">Resume</a>
+                <a href="<a href="https://drive.google.com/file/d/18kMbVLECw7BnYP9xH6aTBjkRxU9KFPgT/view?usp=sharing" target="_blank">Resume</a>
                 <a href="https://github.com/hetuvpatel" target="_blank">
                     <img src="icons8-github-64.png" alt="GitHub" class="icon">
                 </a>
