--- a/index.html
+++ b/index.html
@@ -57,14 +57,21 @@
             <h2>Experience</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <span class="year">May 06 - Present</span>
+                    <span class="year">May 2025 - Present</span>
                     <h3>Department of Computer Science, Toronto Metropolitan University</h3>
                     <p><strong>Position:</strong> Undergraduate Student Assistant</p>
                     <p>Working under the supervision of Dr. Eric Harley and in collaboration with Computer Science and Journalism faculties on the JeRI (Journalism Representation Index) project to enhance news source classification using LLMs and NLP techniques.</p>
                     <p>Assisting with data preprocessing, prompt engineering, and model evaluation to support the development of software that classifies cited entities in news articles (e.g., organizations, experts, authorities) and assesses sourcing balance across diverse media datasets. </p>
                 </div>
                 <div class="timeline-item">
-                    <span class="year">Upcoming</span>
+                    <span class="year">May 2025 - Present</span>
+                    <h3>Toronto Metropolitan University – International Enrolment, Education & Inclusion (ISEEI)</h3>
+                    <p><strong>Position:</strong> International Student Ambassador</p>
+                    <p>Selected to represent TMU's international community, assisting with campus tours, student outreach, and peer support through both in-person and virtual engagement.</p>
+                    <p>Collaborating with the ISEEI team to support recruitment initiatives, foster international student inclusion, and maintain an accessible and welcoming environment for prospective and current students.</p>
+                </div>
+                <div class="timeline-item">
+                    <span class="year">Academic Year 2025 - 2026</span>
                     <h3>Senate Member of Toronto Metropolitan University</h3>
                     <p>Will advocate for student interests by reviewing and voting on key academic policies, ensuring alignment with undergraduate needs, and contributing to discussions on curriculum, grading, and university governance.</p>
                     <p>Will strengthen student representation by engaging with peers, gathering feedback, and presenting concerns to the Senate, leading to informed decision-making on academic and institutional matters.</p>
